--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "styled-components": "^6.1.12"
+    "styled-components": "^6.1.12",
+    "swiper": "^11.1.9"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
